# regional-pointers

./: LICENSE  README.markdown  Setup.hs  regional-pointers.cabal
Foreign/C/String/: Region.hs
Foreign/Marshal/Alloc/: Region.hs
Foreign/Marshal/Array/: Region.hs
Foreign/Marshal/Pool/: Region.hs
Foreign/Marshal/Utils/: Region.hs
Foreign/Ptr/: Region.hs
Foreign/Ptr/Region/: Internal.hs  Unsafe.hs
Foreign/StablePtr/: Region.hs
Foreign/Storable/: Region.hs
